--- a/requirements.txt
+++ b/requirements.txt
@@ -4,5 +4,6 @@ django-js-asset==1.2.2
 django-mptt==0.11.0
 Pillow==8.0.1
 pkg-resources==0.0.0
+python-dotenv==0.15.0
 pytz==2020.4
 sqlparse==0.4.1
